--- a/src/components/Auth/components/Login/index.css
+++ b/src/components/Auth/components/Login/index.css
@@ -42,6 +42,8 @@
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     background-color: #F4F4F4;
+    border-width: 1px;
+    border-color : white;
     padding: 4px;
     width: 45%;
     margin-inline-end: 96px;
