--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,33 @@
 *{
     box-sizing: border-box;
-    border-width: 0;
+    border: 0 solid white;
     margin: 0;
     padding: 0;
 }
 
 body {
     line-height: 1.5;
-    font-family: ui-sans-serif, system-ui, sans-serif;
+    font-family: 'Poppins', ui-sans-serif, system-ui, sans-serif;
     font-feature-settings: normal;
     font-variation-settings: normal;
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #474444;
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555; 
 }
 
 input{
@@ -29,5 +47,15 @@ button {
 
 input {
     background-color: transparent;
+    border: none;
 }
 
+a {
+    text-decoration-line: none;
+    color: black;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
